fix sign up page css alignment for heroku push

--- a/app/assets/stylesheets/components/signup_form.css
+++ b/app/assets/stylesheets/components/signup_form.css
@@ -11,8 +11,8 @@
 .signup-form-container {
   background-color: var(--bg-panel);
   box-shadow: 1px 2px 5px 2px rgba(0,0,0,.2);
-  height: 60%;
-  width: 70%;
+  height: 65%;
+  width: 55%;
   display: flex;
   flex-direction: column;
   align-items: center;
